kuberdef/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursey-database
  labels:
    app: coursey-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coursey-database
  template:
    metadata:
      labels:
        app: coursey-database
    spec:
      containers:
      - name: mysql
        image: gryffin0109/courseyproject:mysql
        ports:
        - name: mysql-port
          containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
